# ambiente-desenvolvimento

.devcontainer/: Dockerfile
projeto/: pyproject.toml
projeto/projeto/: __init__.py
